--- a/galerie.html
+++ b/galerie.html
@@ -15,7 +15,7 @@
         <!--onglet de navigation-->
             <nav>
                 <ul>
-                    <li><a href="edition_limite.html">Présentation</a></li>
+                    <li><a href="index.html">Présentation</a></li>
                     <li><a href="postuler.html">Postuler</a></li>
                     <li><a href="charte_de_guilde.html">Charte de guilde</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
